
   o added new MIDI event types: Clock, Start, Stop, Cont

   o added new meta events to control a MIDI clock divider:
     MClkSetDivider, MClkDecDivider, MClkIncDivider

   o added new .NGC file configuration parameters:
     MidiClkOutPorts and MidiClkInPorts

   o new LCD format character '%L' allows to display logic control digits
     (MTC and status digits)


MIDIbox NG V1.035
~~~~~~~~~~~~~~~~~

   o Support for secure keyboard handling if patch is switched: keep original
     MIDI port, note, channel when playing Note Off
     (this feature is not supported for LPC17 due to high memory consumption)

    o Fixed encoder incrementer in absolute mode


MIDIbox NG V1.034
~~~~~~~~~~~~~~~~~

   o Support for interpolation tables:
     MAPs can now apply linear interpolation between data points.
     This allows to quickly define curves without the need to enter the values for the complete range.
     E.g. previously it was required to enter 128 values to create a curve for a CC controller,
     now it's mostly sufficient to define the same with 3..4 data points. MBNG will interpolate
     the values between these points.

     Interpolation tables can be defined with following commands:
     MAP<n>/BYTEI and MAP<n>/HWORDI

     A BYTEI map can define up to 64 datapoints with 8bit resultion,
     and a HWORDI map can define up to 32 datapoints with 16bit resolution.

     Usage examples can be found under cfg/test/map* and cfg/test/kb_2.ngc

     See the user manual for further explanations.

   o Support for 16bit maps: with MAP<n>/HWORD 16bit values can be mapped.

   o label "std_rgbled" renamed to "std_rgb" to avoid error message

   o Cursor handling on SysEx based GLCD output should now work correctly if the big font is activated


MIDIbox NG V1.033
~~~~~~~~~~~~~~~~~

   o with this release, .NGR scripts running on a STM32F4 are directly executed from RAM in a compressed