@@ -1,0 +1,47 @@
+# This run script is used in conjunction with kb_6.ngc to control the keyboard velocity map and transpose
+
+#################################################################################
+if ^section == 0
+   lcd "%CNote C-1 Map: 1@(1:1:2)Transpose:    0"
+endif
+
+#################################################################################
+if ^section == 1
+   log "Velocity Map #1 selected"
+   lcd "@(1:15:1)1"
+   set_kb_velocity_map KB:1 1
+endif
+
+#################################################################################
+if ^section == 2
+   log "Velocity Map #2 selected"
+   lcd "@(1:15:1)2"
+   set_kb_velocity_map KB:1 2
+endif
+
+#################################################################################
+if ^section == 3
+   log "Velocity Map #3 selected"
+   lcd "@(1:15:1)3"
+   set_kb_velocity_map KB:1 3
+endif
+
+#################################################################################
+if ^section == 4
+   log "Velocity Map #4 selected"
+   lcd "@(1:15:1)4"
+   set_kb_velocity_map KB:1 4
+endif
+
+#################################################################################
+if ^section == 5
+   log "Shift button not assigned to any function!"
+endif
+
+#################################################################################
+if ^section == 10
+   log "Change Transpose"
+
+   set_kb_transpose KB:1 ^value
+   lcd "@(1:13:2)%3d"
+endif
